--- a/.env
+++ b/.env
@@ -1,8 +1,3 @@
-BOT_TOKEN=7251438652:AAFE0AUDVi769iQlwhmhHavJjWFDnsl5DaQ
-ADMIN_IDS=948188858,7411074390
-DATABASE_URL=postgresql://botcanal:botcanal@localhost:5432/botcanal
-#DB_NAME=botcanal
-#DB_USER=botcanal
-#DB_PASSWORD=botcanal
-#DB_HOST=localhost
-#DB_PORT=5432
+BOT_TOKEN=xxxxxxxxxxxxxx
+ADMIN_IDS=xxxxxxxxxxxxxxxxxxx
+DATABASE_URL=postgresql://xxxxxx:xxxxxxxx@xxxxx:xxxxx/xxxx
